Added the history graphs

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -196,93 +196,96 @@ End of Shift Projection : {{request.session.projection}}
 </table>
 <br><br>
 
+
 <b><u>Previous Shifts</u></b>
 <br>
 <table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
+<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u1}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u1}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd1}} 
 {{request.session.m1}}
 {{request.session.day1}},
 2020 
+</a>
 </td><td style="border:1px solid black;">
 {{request.session.shift1}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count1}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u2}}" target="_blank">
 {{request.session.wd2}} 
 {{request.session.m2}}
 {{request.session.day2}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift2}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count2}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u3}}" target="_blank">
 {{request.session.wd3}} 
 {{request.session.m3}}
 {{request.session.day3}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift3}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count3}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u4}}" target="_blank">
 {{request.session.wd4}} 
 {{request.session.m4}}
 {{request.session.day4}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift4}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count4}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u5}}" target="_blank">
 {{request.session.wd5}} 
 {{request.session.m5}}
 {{request.session.day5}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift5}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count5}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u6}}" target="_blank">
 {{request.session.wd6}} 
 {{request.session.m6}}
 {{request.session.day6}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift6}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count6}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u7}}" target="_blank">
 {{request.session.wd7}} 
 {{request.session.m7}}
 {{request.session.day7}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift7}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count7}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u8}}" target="_blank">
 {{request.session.wd8}} 
 {{request.session.m8}}
 {{request.session.day8}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift8}} Shift
 </td><td style="border:1px solid black;">
 {{request.session.count8}}
 </td></tr>
-<tr><td style="border:1px solid black;">
+<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u9}}" target="_blank">
 {{request.session.wd9}} 
 {{request.session.m9}}
 {{request.session.day9}},
-2020 
+2020 </a>
 </td><td style="border:1px solid black;">
 {{request.session.shift9}} Shift
 </td><td style="border:1px solid black;">
