--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -211,7 +211,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count1}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u2}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u2}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u2}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd2}} 
 {{request.session.m2}}
 {{request.session.day2}},
@@ -221,7 +222,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count2}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u3}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u3}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u3}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd3}} 
 {{request.session.m3}}
 {{request.session.day3}},
@@ -231,7 +233,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count3}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u4}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u4}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u4}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd4}} 
 {{request.session.m4}}
 {{request.session.day4}},
@@ -241,7 +244,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count4}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u5}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u5}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u5}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd5}} 
 {{request.session.m5}}
 {{request.session.day5}},
@@ -251,7 +255,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count5}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u6}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u6}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u6}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd6}} 
 {{request.session.m6}}
 {{request.session.day6}},
@@ -261,7 +266,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count6}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u7}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u7}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u7}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd7}} 
 {{request.session.m7}}
 {{request.session.day7}},
@@ -271,7 +277,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count7}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u8}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u8}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u8}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd8}} 
 {{request.session.m8}}
 {{request.session.day8}},
@@ -281,7 +288,8 @@ End of Shift Projection : {{request.session.projection}}
 </td><td style="border:1px solid black;">
 {{request.session.count8}}
 </td></tr>
-<tr><td style="border:1px solid black;"><a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u9}}" target="_blank">
+<tr><td style="border:1px solid black;">
+	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u9}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{request.session.u9}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{request.session.wd9}} 
 {{request.session.m9}}
 {{request.session.day9}},
@@ -328,90 +336,99 @@ End of Shift Projection : {{request.session.projection}}
 	<b><u>Previous Shifts</u></b>
 	<br>
 	<table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u1}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u1}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd1}} 
 	{{request.session.m1}}
 	{{request.session.day1}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift1}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count1a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u2}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u2}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd2}} 
 	{{request.session.m2}}
 	{{request.session.day2}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift2}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count2a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u3}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u3}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd3}} 
 	{{request.session.m3}}
 	{{request.session.day3}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift3}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count3a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u4}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u4}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd4}} 
 	{{request.session.m4}}
 	{{request.session.day4}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift4}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count4a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u5}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u5}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd5}} 
 	{{request.session.m5}}
 	{{request.session.day5}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift5}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count5a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u6}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u6}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd6}} 
 	{{request.session.m6}}
 	{{request.session.day6}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift6}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count6a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u7}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u7}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd7}} 
 	{{request.session.m7}}
 	{{request.session.day7}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift7}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count7a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u8}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u8}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd8}} 
 	{{request.session.m8}}
 	{{request.session.day8}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift8}} Shift
 	</td><td style="border:1px solid black;">
 	{{request.session.count8a}}
 	</td></tr>
 	<tr><td style="border:1px solid black;">
+		<a href="{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.u9}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_tri_prev/get/{{request.session.9}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{request.session.wd9}} 
 	{{request.session.m9}}
 	{{request.session.day9}},
-	2020 
+	2020 </a>
 	</td><td style="border:1px solid black;">
 	{{request.session.shift9}} Shift
 	</td><td style="border:1px solid black;">
