fixed Tracking Html

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -162,8 +162,8 @@ function drawCurveTypes() {
 <!-- <br><br>
 <input type="button" value="Close this window" onclick="windowClose();"> -->
 
-<!-- 
-<meta http-equiv="refresh" content="30; url={{request.session.local_toggle}}/tracking" /> -->
+
+<meta http-equiv="refresh" content="30; url={{request.session.local_toggle}}/tracking" />
 
 <div class="wrapper_main">
 <div class="head1_u">
@@ -302,7 +302,7 @@ End of Shift Projection : {{request.session.projection}}
 {{request.session.count9}}
 </td></tr>
 </table>
-<br><br>
+<!-- <br><br>
 {% for item in GList %}
 {{item.0}}  &nbsp;&nbsp;&nbsp;&nbsp;
 {{item.1}}  &nbsp;&nbsp;&nbsp;&nbsp;
@@ -310,7 +310,7 @@ End of Shift Projection : {{request.session.projection}}
 {{item.3}}  &nbsp;&nbsp;&nbsp;&nbsp;
 
 <br>
-{% endfor %}
+{% endfor %} -->
 </div>
 
 
