--- a/trakberry/templates/kiosk/kiosk_production_entry.html
+++ b/trakberry/templates/kiosk/kiosk_production_entry.html
@@ -151,6 +151,11 @@
 			<option>7</option>
 			<option>7.5</option>
 			<option>8</option>
+			<option>9</option>
+			<option>10</option>
+			<option>11</option>
+			<option>12</option>
+
 		</select>
 	</div>
 	
