--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -110,7 +110,8 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 								<li><a href="{{request.session.local_toggle}}/manpower_update">Manpower Update</a></li>
-								<li><a href="{{request.session.local_toggle}}/track_10r">TRACK</a></li>
+								<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
+								<li><a href="{{request.session.local_toggle}}/training_matrix2">Matrix</a></li>
 							   <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
 
 							   <li class="dropdown-submenu">
