--- a/trakberry/templates/test4.html
+++ b/trakberry/templates/test4.html
@@ -5,16 +5,21 @@
 <body>
 
 <br>
-<br><br>
-{{Date}}
-<br><br>
+
+DONE UPDATE !!!!!
+<!-- <table>
+
+
+
+	
+</table>
 {% for item in A %}
 
 {{D}}:{{item}} 
 
 <br>
 
-{% endfor %}
+{% endfor %} -->
 
 </body>
 </html>
