--- a/trakberry/templates/test71.html
+++ b/trakberry/templates/test71.html
@@ -1,28 +1,18 @@
 <html>
 <body>
-
-
+{{datax}}
 
 <br><br>
 
-{% for i in cmp %}
+
+{% for i in datax %}
+test:
 {{ i}} <br>
 {% endfor %}
+<br><br>
 
-<br>
-{{sch}}
-<br><br>
-{{cc}}
-<br><br>
-{{bmp}}
-<br><br>
-{% for x in list %}
-{{x}}<br>
-{% endfor %}<br>
-<br><br>
-{{prev}}
-<!--
-{{List}}
 
--->
+
+<br><br>
+Done !
 </body></html>
